--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-	"name": "create-node-project",
-	"version": "0.0.2",
-	"main": "index.js",
-	"repository": "git@github.com:mattdanielmurphy/create-node-project.git",
-	"author": "Matthew Daniel Murphy <matt@mattmurphy.ca>",
-	"license": "MIT",
-	"dependencies": {},
-	"bin": "src/index.js",
-	"scripts": {
-		"dev": "cd ../; rm -rf test-create-node-project; tsc 'Create Node Project/src/index.ts'; node 'Create Node Project/src/index.js' test-create-node-project",
-		"lint": "eslint . --ext .ts"
-	},
-	"devDependencies": {
-		"@types/node": "^14.14.35",
-		"@typescript-eslint/eslint-plugin": "^4.18.0",
-		"@typescript-eslint/parser": "^4.18.0",
-		"eslint": "^7.22.0",
-		"typescript": "^4.2.3"
-	}
+  "name": "test-create-node-project",
+  "version": "0.0.1",
+  "main": "index.js",
+  "repository": "git@github.com:mattdanielmurphy/test-create-node-project.git",
+  "author": "Matthew Daniel Murphy <matt@mattmurphy.ca>",
+  "license": "MIT",
+  "dependencies": {},
+  "bin": "src/index.js",
+  "scripts": {
+    "dev": "cd ../; rm -rf test-create-node-project; tsc 'Create Node Project/src/index.ts'; node 'Create Node Project/src/index.js' test-create-node-project",
+    "lint": "eslint . --ext .ts"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.35",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
+    "eslint": "^7.22.0",
+    "typescript": "^4.2.3"
+  }
 }
